# CProjectsMIREA

./: 2.1  2.1.c  3.1  3.1.c  CMakeLists.txt  main
Lesson 2/: 2.2  2.2.c
Lesson 3/: 3.1.c  3.2.c
Lesson 4/: 4.2  4.2.c
Lesson 5/: 5.1.c  5.2.c
Lesson 5/Lesson 5 [Karacuba]/: 5.2.c  longnum_utils.c  longnum_utils.h
Lesson 6/: 6.1.c  macros.h
Lesson 7/: 7.1  7.2  7.2.c  crypt.txt  input.txt
Lesson 7/Lesson 7 [RSA]/: 7.2  7.2.c  crypt.txt  input.txt  rsa.c  rsa.h  xor.c  xor.h
Lesson 8/: 8.2  8.2.c
Lesson 8 [Life]/: 8.1  8.1.c  life.c  life.h  output.txt
Lesson 8/Lesson 8 [Life]/: 8.1  8.1.c  life.c  output.txt
Lesson 9/: 9.1  9.1.c  crypt.txt  output.txt
Term 1/Lesson 4/: 4.1.c
Term 1/Lesson 5/Lesson 5 [Karacuba]/: 5.2  longnum.c  longnum.h
Term 1/Lesson 6/: macros.h
Term 1/Lesson 7/: 7.1.c
Term 1/Lesson 7/Lesson 7 [RSA]/: 7.2.c  rsa.c  xor.c
Term 1/Lesson 8/Lesson 8 [Life]/: life.h
Term 2/Lesson 1/: 9.1  9.1.c  file.c  file.h  input_a  input_b  main.c  matrix.c  matrix.h  out  out.txt
Term 2/Lesson 2/: main.c  matrix.c  matrix.h  out
Term 2/Lesson 2_1/: main.c  matrix.c  matrix.h
Term 2/Lesson 3/: main  main.c  matrix.c  matrix.h  out  out.txt  strassen.c  strassen.h
Term 2/Lesson 4/: main  main.c
Term 2/Lesson 5/: blockchain  main.c
