cmake_minimum_required(VERSION 3.26)
project(CProjectsMIREA C)

set(CMAKE_C_STANDARD 11)

add_executable(CProjectsMIREA
        "Lesson 2/2.1.c"
        "Lesson 2/2.2.c"
        "Lesson 3/3.1.c"
        "Lesson 3/3.2.c"
        "Lesson 4/4.1.c"
        "Lesson 4/4.1.c"
        "Lesson 5/5.1.c"
        "Lesson 5/5.1.c"
        "Lesson 4/4.2.c"
        "Lesson 8/8.2.c"
        "Lesson 8/Lesson 8 [Life]/life.c"
        "Lesson 8/Lesson 8 [Life]/life.c"
        "Lesson 7/7.1.c"
        "Lesson 7/7.1.c"
        "Lesson 5/5.2.c"
        "Lesson 6/6.1.c"
        "Lesson 7/7.2.c")
