cmake_minimum_required(VERSION 3.26)
project(CProjectsMIREA C)

set(CMAKE_C_STANDARD 11)

add_executable(CProjectsMIREA
        "Lesson 2/2.1.c"
        "Lesson 2/2.2.c"
        "Lesson 3/3.1.c"
        "Lesson 3/3.2.c"
        "Lesson 4/4.1.c"
        "Lesson 4/4.1.c"
        "Lesson 5/5.1.c"
        "Lesson 5/5.1.c"
        "Lesson 4/4.2.c"
        "Lesson 8/8.2.c"
        "Lesson 8/Lesson 8 [Life]/life.c"
        "Lesson 8/Lesson 8 [Life]/life.c"
        "Lesson 7/7.1.c"
        "Lesson 7/7.1.c"
        "Lesson 5/Lesson 5 [Karacuba]/5.2.c"
        "Lesson 6/6.1.c"
        "Lesson 7/Lesson 7 [RSA]/7.2.c"
        "Lesson 7/Lesson 7 [RSA]/7.2.c"
        "Lesson 7/Lesson 7 [RSA]/7.2.c"
        "Lesson 7/Lesson 7 [RSA]/rsa.c"
        "Lesson 7/Lesson 7 [RSA]/rsa.h"
        "Lesson 7/Lesson 7 [RSA]/xor.c"
        "Lesson 7/Lesson 7 [RSA]/xor.h"
        "Lesson 6/macros.c"
        "Lesson 6/macros.h"
        "Lesson 5/Lesson 5 [Karacuba]/longnum.c"
        "Lesson 5/Lesson 5 [Karacuba]/longnum_utils.c"
        "Lesson 5/Lesson 5 [Karacuba]/longnum.h"
        "Lesson 5/Lesson 5 [Karacuba]/longnum_utils.h"
)
