cmake_minimum_required(VERSION 3.26)
project(CProjectsMIREA C)

set(CMAKE_C_STANDARD 11)

add_executable(CProjectsMIREA
        "Term 1/Lesson 2/2.1.c"
        "Term 1/Lesson 2/2.2.c"
        "Term 1/Lesson 3/3.1.c"
        "Term 1/Lesson 3/3.2.c"
        "Term 1/Lesson 4/4.1.c"
        "Term 1/Lesson 4/4.1.c"
        "Term 1/Lesson 5/5.1.c"
        "Term 1/Lesson 5/5.1.c"
        "Term 1/Lesson 4/4.2.c"
        "Term 1/Lesson 8/8.2.c"
        "Term 1/Lesson 8/Lesson 8 [Life]/life.c"
        "Term 1/Lesson 8/Lesson 8 [Life]/life.c"
        "Term 1/Lesson 7/7.1.c"
        "Term 1/Lesson 7/7.1.c"
        "Term 1/Lesson 5/Lesson 5 [Karacuba]/5.2.c"
        "Term 1/Lesson 6/6.1.c"
        "Term 1/Lesson 7/Lesson 7 [RSA]/7.2.c"
        "Term 1/Lesson 7/Lesson 7 [RSA]/7.2.c"
        "Term 1/Lesson 7/Lesson 7 [RSA]/7.2.c"
        "Term 1/Lesson 7/Lesson 7 [RSA]/rsa.c"
        "Term 1/Lesson 7/Lesson 7 [RSA]/rsa.h"
        "Term 1/Lesson 7/Lesson 7 [RSA]/xor.c"
        "Term 1/Lesson 7/Lesson 7 [RSA]/xor.h"
        "Term 1/Lesson 6/macros.c"
        "Term 1/Lesson 6/macros.h"
        "Term 1/Lesson 5/Lesson 5 [Karacuba]/longnum.c"
        "Term 1/Lesson 5/Lesson 5 [Karacuba]/longnum_utils.c"
        "Term 1/Lesson 5/Lesson 5 [Karacuba]/longnum.h"
        "Term 1/Lesson 5/Lesson 5 [Karacuba]/longnum_utils.h"
        "Term 2/Lesson 1/main.c"
        "Term 2/Lesson 1/matrix.c"
        "Term 2/Lesson 1/matrix.h"
        "Term 2/Lesson 1/file.c"
        "Term 2/Lesson 1/file.h"
        "Term 2/Lesson 2/main.c"
)
